--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.epay.validator.validator_epay">
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -15,6 +16,10 @@
         <activity android:name=".Activities.MainActivity">
 
         </activity>
+        <activity
+            android:name="com.journeyapps.barcodescanner.CaptureActivity"
+            android:screenOrientation="portrait"
+            tools:replace="screenOrientation" />
 
         <service android:name=".Activities.HelloService" />
 
