--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
         <activity android:name=".Activities.MainScreen" />
         <activity android:name=".Activities.Transactions" />
         <activity android:name=".Activities.Invoice" />
-        <activity android:name=".Activities.User_Info"> <intent-filter>
+        <activity android:name=".Activities.User_Info"
+            android:windowSoftInputMode="stateHidden">
+            <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
             <category android:name="android.intent.category.LAUNCHER" />
