--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,11 +31,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile files('libs/printer7003.jar')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.journeyapps:zxing-android-embedded:3.5.0'
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
+    compile 'org.altbeacon:android-beacon-library:2.+'
     testCompile 'junit:junit:4.12'
-    compile 'org.altbeacon:android-beacon-library:2+'
-    compile files('libs/printer7003.jar')
 }
