--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
     compile 'org.altbeacon:android-beacon-library:2.+'
     testCompile 'junit:junit:4.12'
+    compile 'cn.pedant.sweetalert:library:1.3'
 }
